[workspace]
members = [".", "cargo_px_env"]

[package]
name = "cargo-px"
version = "0.1.5"
edition = "2021"
keywords = ["cargo", "generator", "build", "scripts", "generate"]
description = "A cargo sub-command to overcome some of the limitations of build scripts for code generation."
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/LukeMathWalker/cargo-px"
license = "Apache-2.0 OR MIT"

[[bin]]
path = "src/bin/main.rs"
name = "cargo-px"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.70"
guppy = "0.15.2"
petgraph = { version = "0.6.3", features = ["stable_graph"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "time"] }
textwrap = "0.16"
