[workspace]
members = [".", "cargo_px_env"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]

[package]
name = "cargo-px"
version = "0.1.11"
edition = "2021"
keywords = ["cargo", "generator", "build", "scripts", "generate"]
description = "A cargo sub-command to overcome some of the limitations of build scripts for code generation."
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
repository = "https://github.com/LukeMathWalker/cargo-px"
license = "Apache-2.0 OR MIT"

[[bin]]
path = "src/bin/main.rs"
name = "cargo-px"

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.70"
guppy = "0.17.2"
petgraph = { version = "0.6.3", features = ["stable_graph"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "time"] }
textwrap = "0.16"
once_cell = "1.17.1"
anstream = "0.6.4"
anstyle = "1.0.4"
url = "2.4.1"
supports-hyperlinks = "2.1.0"
libc = "0.2.149"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
